--- a/ICT4Events/ReservationSystem/ReservationSystem.csproj
+++ b/ICT4Events/ReservationSystem/ReservationSystem.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="AccountManager.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
