--- a/ICT4Events/PTDatabaseConnection/PTDataManager/PTDataManager.csproj
+++ b/ICT4Events/PTDatabaseConnection/PTDataManager/PTDataManager.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48C88F3E-DFAC-47D7-8EDD-B36786F1C89F}</ProjectGuid>
+    <ProjectGuid>{04187FC5-C545-44BA-9905-D962118C1068}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SocialMediaSharingSystem</RootNamespace>
-    <AssemblyName>SocialMediaSharingSystem</AssemblyName>
+    <RootNamespace>PTDataManager</RootNamespace>
+    <AssemblyName>PTDataManager</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
