now actually added the dll and changed location

--- a/ICT4Events/EventManagementSystem/EventManagementSystem.csproj
+++ b/ICT4Events/EventManagementSystem/EventManagementSystem.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AccountLibrary">
+      <HintPath>..\Libraries\AccountLibrary\AccountLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,8 +47,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account.cs" />
-    <Compile Include="AccountManager.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventManager.cs" />
     <Compile Include="Form1.cs">
