--- a/ICT4Events/ReservationSystem/ReservationSystem.csproj
+++ b/ICT4Events/ReservationSystem/ReservationSystem.csproj
@@ -66,6 +66,9 @@
     <Compile Include="ReservationManager.cs" />
     <Compile Include="SuperManager.cs" />
     <Compile Include="Type.cs" />
+    <EmbeddedResource Include="ExtraPersons.resx">
+      <DependentUpon>ExtraPersons.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
