--- a/ICT4Events/PTDatabaseConnection/PTDatabaseConnection/PTDatabaseConnection.csproj
+++ b/ICT4Events/PTDatabaseConnection/PTDatabaseConnection/PTDatabaseConnection.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AccountLibrary">
+      <HintPath>..\..\Libraries\AccountLibrary\AccountLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="Oracle.DataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
