--- a/ICT4Events/SocialMediaSharingSystem/SocialMediaSharingSystem.csproj
+++ b/ICT4Events/SocialMediaSharingSystem/SocialMediaSharingSystem.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{48C88F3E-DFAC-47D7-8EDD-B36786F1C89F}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SocialMediaSharingSystem</RootNamespace>
     <AssemblyName>SocialMediaSharingSystem</AssemblyName>
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AccountLibrary">
