added guest and employee subclas

--- a/ICT4Events/Libraries/AccountLibrary/AccountLibrary.csproj
+++ b/ICT4Events/Libraries/AccountLibrary/AccountLibrary.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="AccountManager.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Guest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
