--- a/ICT4Events/SocialMediaSharingSystem/SocialMediaSharingSystem.csproj
+++ b/ICT4Events/SocialMediaSharingSystem/SocialMediaSharingSystem.csproj
@@ -38,6 +38,9 @@
     <Reference Include="AccountLibrary">
       <HintPath>..\Libraries\AccountLibrary\AccountLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="DataLibrary">
+      <HintPath>..\Libraries\DataLibrary\DataLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CategoryForm.Designer.cs">
+      <DependentUpon>CategoryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Comment.cs" />
     <Compile Include="File.cs" />
     <Compile Include="Form1.cs">
@@ -60,12 +69,24 @@
     </Compile>
     <Compile Include="LikeFlag.cs" />
     <Compile Include="Post.cs" />
+    <Compile Include="UploadForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UploadForm.Designer.cs">
+      <DependentUpon>UploadForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PostManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperManager.cs" />
+    <EmbeddedResource Include="CategoryForm.resx">
+      <DependentUpon>CategoryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UploadForm.resx">
+      <DependentUpon>UploadForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
