--- a/ICT4Events/MaterialRentalSysteem/MaterialRentalSysteem.csproj
+++ b/ICT4Events/MaterialRentalSysteem/MaterialRentalSysteem.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Item.cs" />
+    <Compile Include="ItemManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperManager.cs" />
