--- a/ICT4Events/EventManagementSystem/EventManagementSystem.csproj
+++ b/ICT4Events/EventManagementSystem/EventManagementSystem.csproj
@@ -38,6 +38,7 @@
     <Reference Include="DataLibrary">
       <HintPath>..\Libraries\DataLibrary\DataLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.DataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,6 +59,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperManager.cs" />
