--- a/ICT4Events/ReservationSystem/ReservationSystem.csproj
+++ b/ICT4Events/ReservationSystem/ReservationSystem.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{137A29EB-0D8F-4F1E-9341-6C1426C6612E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReservationSystem</RootNamespace>
+    <RootNamespace>EventManagementSystem</RootNamespace>
     <AssemblyName>ReservationSystem</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -90,6 +90,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
